tests/sksl/errors/golden/OpaqueTypeInStruct.glsl

uniform struct Bad {
    sampler x;
} b;
void main() {
}
